--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 .idea/
 out/
+*.iml
 
 ### Maven ###
 
@@ -15,3 +16,4 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+.idea/workspace.xml
